# MatrixMult

./: CMakeLists.txt  LICENSE  Makefile  README.md  README.txt
include/: mat_tools.h  matmult.h  opencl_matmult.h  opencl_tools.h
kernels/: kernel_matmult.cl  kernel_matmult_tiling.cl  kernel_matmult_tiling_colmajor.cl  kernel_matmult_tiling_colmajor_padded.cl  kernel_transpose.cl
src/: main.c  mat_tools.c  mat_tools.h  matmult.c  matmult.h  opencl_matmult.c  opencl_matmult.h  opencl_tools.c  opencl_tools.h
tests/include/: test_tools.h
tests/src/: main.c  test_tools.c
